[package]
name = "conjure"
version = "0.1.0"
authors = ["Benjamin Brittain <ben@brittain.org>"]
license = "AGPL-3.0"
edition = "2021"
resolver = "2"

[dependencies]
argh = "0.1"
nalgebra = "0.29"
thiserror = "1"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
futures = {version = "0.3", features = ["executor"]}
bytemuck = { version = "1.4", features = [ "derive" ] }
regex = "1.5"
notify = "4.0.16"
parking_lot = "0.11"
rayon = "1.5"

[lib]
name = "conjure"
path = "src/lib.rs"

[[bin]]
name = "conjure-bin"
path = "src/main.rs"

[[example]]
name = "sphere"

[profile.release]
debug = true
panic = "abort"

[dev-dependencies]
pprof = { version = "0.6", features = ["flamegraph", "criterion"] }
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "octree_render"
harness = false
